HOM-23 fix overflow with new style

--- a/scss/components/images.scss
+++ b/scss/components/images.scss
@@ -1,6 +1,6 @@
 .background-img {
     img {
-        height: auto;
-        max-width: 1920px;
+        height: 100%;
+        max-width: 100%;
     }
 }
